--- a/web/public/index.html
+++ b/web/public/index.html
@@ -10,8 +10,12 @@
     <div class="main" ng-view>
     </div>
     
+    <script>
+      var exports = {};
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
     <script src="build.js"></script>
+    <script src="vendor.js"></script>
   </body>
 </html>
